Rework Commands (Update RoseGarden)