@@ -1,27 +1,27 @@
 package xyz.oribuin.eternaltags.command.argument;
 
-import dev.rosewood.rosegarden.RosePlugin;
-import dev.rosewood.rosegarden.command.framework.ArgumentParser;
-import dev.rosewood.rosegarden.command.framework.RoseCommandArgumentHandler;
-import dev.rosewood.rosegarden.command.framework.RoseCommandArgumentInfo;
+import dev.rosewood.rosegarden.command.framework.Argument;
+import dev.rosewood.rosegarden.command.framework.ArgumentHandler;
+import dev.rosewood.rosegarden.command.framework.CommandContext;
+import dev.rosewood.rosegarden.command.framework.InputIterator;
 import dev.rosewood.rosegarden.utils.StringPlaceholders;
+import xyz.oribuin.eternaltags.EternalTags;
 import xyz.oribuin.eternaltags.manager.CategoryManager;
 import xyz.oribuin.eternaltags.obj.Category;
 import xyz.oribuin.eternaltags.obj.CategoryType;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class CategoryArgumentHandler extends RoseCommandArgumentHandler<Category> {
+public class CategoryArgumentHandler extends ArgumentHandler<Category> {
 
-    public CategoryArgumentHandler(RosePlugin rosePlugin) {
-        super(rosePlugin, Category.class);
+    public CategoryArgumentHandler() {
+        super(Category.class);
     }
 
     @Override
-    protected Category handleInternal(RoseCommandArgumentInfo argumentInfo, ArgumentParser argumentParser) throws HandledArgumentException {
-        String input = argumentParser.next();
-        Category value = this.rosePlugin.getManager(CategoryManager.class).getCategory(input.toLowerCase());
+    public Category handle(CommandContext context, Argument argument, InputIterator inputIterator) throws HandledArgumentException {
+        String input = inputIterator.next();
+        Category value = EternalTags.getInstance().getManager(CategoryManager.class).getCategory(input.toLowerCase());
         if (value == null || value.getType() == CategoryType.GLOBAL)
             throw new HandledArgumentException("argument-handler-category", StringPlaceholders.of("input", input));
 
@@ -29,15 +29,13 @@ public class CategoryArgumentHandler extends RoseCommandArgumentHandler<Category
     }
 
     @Override
-    protected List<String> suggestInternal(RoseCommandArgumentInfo argumentInfo, ArgumentParser argumentParser) {
-        argumentParser.next();
-
-        return this.rosePlugin.getManager(CategoryManager.class)
+    public List<String> suggest(CommandContext context, Argument argument, String[] args) {
+        return EternalTags.getInstance().getManager(CategoryManager.class)
                 .getCategories()
                 .stream()
                 .filter(category -> category.getType() != CategoryType.GLOBAL)
                 .map(Category::getId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
