@@ -1,24 +1,25 @@
 package xyz.oribuin.eternaltags.command.argument;
 
-import dev.rosewood.rosegarden.RosePlugin;
-import dev.rosewood.rosegarden.command.framework.ArgumentParser;
-import dev.rosewood.rosegarden.command.framework.RoseCommandArgumentHandler;
-import dev.rosewood.rosegarden.command.framework.RoseCommandArgumentInfo;
+import dev.rosewood.rosegarden.command.framework.Argument;
+import dev.rosewood.rosegarden.command.framework.ArgumentHandler;
+import dev.rosewood.rosegarden.command.framework.CommandContext;
+import dev.rosewood.rosegarden.command.framework.InputIterator;
 import dev.rosewood.rosegarden.utils.StringPlaceholders;
 import org.bukkit.Material;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
-public class MaterialArgumentHandler extends RoseCommandArgumentHandler<Material> {
+public class MaterialArgumentHandler extends ArgumentHandler<Material> {
 
-    public MaterialArgumentHandler(RosePlugin rosePlugin) {
-        super(rosePlugin, Material.class);
+    public MaterialArgumentHandler() {
+        super(Material.class);
     }
 
     @Override
-    protected Material handleInternal(RoseCommandArgumentInfo argumentInfo, ArgumentParser argumentParser) throws HandledArgumentException {
-        String input = argumentParser.next();
+    public Material handle(CommandContext context, Argument argument, InputIterator inputIterator) throws HandledArgumentException {
+        String input = inputIterator.next();
         Material value = Material.matchMaterial(input);
         if (value == null)
             throw new HandledArgumentException("argument-handler-material", StringPlaceholders.of("input", input));
@@ -27,9 +28,11 @@ public class MaterialArgumentHandler extends RoseCommandArgumentHandler<Material
     }
 
     @Override
-    protected List<String> suggestInternal(RoseCommandArgumentInfo argumentInfo, ArgumentParser argumentParser) {
-        argumentParser.next();
-
-        return Arrays.stream(Material.values()).map(material -> material.name().toLowerCase()).toList();
+    public List<String> suggest(CommandContext context, Argument argument, String[] args) {
+        return Arrays.stream(Material.values())
+                .filter(Material::isItem)
+                .map(material -> material.name().toLowerCase())
+                .collect(Collectors.toList());
     }
+
 }
