@@ -1,12 +1,24 @@
 package xyz.oribuin.eternaltags.manager;
 
 import dev.rosewood.rosegarden.RosePlugin;
-import dev.rosewood.rosegarden.command.framework.RoseCommandWrapper;
+import dev.rosewood.rosegarden.command.framework.BaseRoseCommand;
 import dev.rosewood.rosegarden.manager.AbstractCommandManager;
-import xyz.oribuin.eternaltags.command.TagsCommandWrapper;
+import xyz.oribuin.eternaltags.command.impl.CategoriesCommand;
+import xyz.oribuin.eternaltags.command.impl.ClearCommand;
+import xyz.oribuin.eternaltags.command.impl.ConvertCommand;
+import xyz.oribuin.eternaltags.command.impl.CreateCommand;
+import xyz.oribuin.eternaltags.command.impl.DeleteCommand;
+import xyz.oribuin.eternaltags.command.impl.EditCommand;
+import xyz.oribuin.eternaltags.command.impl.FavoriteCommand;
+import xyz.oribuin.eternaltags.command.impl.RandomCommand;
+import xyz.oribuin.eternaltags.command.impl.ReloadCommand;
+import xyz.oribuin.eternaltags.command.impl.SearchCommand;
+import xyz.oribuin.eternaltags.command.impl.SetAllCommand;
+import xyz.oribuin.eternaltags.command.impl.SetCommand;
+import xyz.oribuin.eternaltags.command.impl.TagsCommand;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.function.Function;
 
 public class CommandManager extends AbstractCommandManager {
 
@@ -15,12 +27,8 @@ public class CommandManager extends AbstractCommandManager {
     }
 
     @Override
-    public List<Class<? extends RoseCommandWrapper>> getRootCommands() {
-        return Collections.singletonList(TagsCommandWrapper.class);
+    public List<Function<RosePlugin, BaseRoseCommand>> getRootCommands() {
+        return List.of(TagsCommand::new);
     }
 
-    @Override
-    public List<String> getArgumentHandlerPackages() {
-        return Collections.singletonList("xyz.oribuin.eternaltags.command.argument");
-    }
 }
